@@ -1576,3 +1576,38 @@ void mio_set_handlers(mio m, mio_handlers mh) {
 
     mio_handlers_free(old);
 }
+
+#ifndef SUPPORT_TLS
+/**
+ * check if a connection is encrypted
+ *
+ * @param m the connection
+ * @return 0 if the connection is not encrypted, 1 if the connection is integrity protected, >1 if encrypted
+ */
+int mio_is_encrypted(mio m) {
+    return 0;
+}
+
+/**
+ * check if it would be possible to start TLS on a connection
+ *
+ * @param m the connection
+ * @param identity our own identity (check if certificate is present)
+ * @return 0 if it is impossible, 1 if it is possible
+ */
+int mio_ssl_starttls_possible(mio m, const char* identity) {
+    return 0;
+}
+
+/**
+ * start a TLS layer on a connection and set the appropriate mio handlers for SSL/TLS
+ *
+ * @param m the connection on which the TLS layer should be established
+ * @param originator 1 if this side is the originating side, 0 else
+ * @param identity our own identity (selector for the used certificate)
+ * @return 0 on success, non-zero on failure
+ */
+int mio_ssl_starttls(mio m, int originator, const char* identity) {
+    return -1;
+}
+#endif
